--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <header>
         <div class="container">
             <div class="header-con">
-                <a class="logo" href="#"><span class="logo-blue">Web</span><span>Studio</span></a>
+                <a class="logo" href="#"><span class="logo__blue">Web</span><span>Studio</span></a>
             
             <div class="nav-container">
                 <nav>
                     <ul class="nav">
-                        <li class="nav-active"><a href="#">Студія</a></li>
+                        <li class="nav__active"><a href="#">Студія</a></li>
                         <li><a href="./portfolio.html">Портфоліо</a></li>
                         <li><a href="#">Контакти</a></li>
                     </ul>
@@ -124,9 +124,9 @@
                 <ul class="our-team">
                     <li>
                         <img src="./images/igor.jpg" alt="Ігор Дем'яненко - Product Designer" width="270">
-                        <p class="name">Ігор Дем'яненко</p>
-                        <p class="job-title">Product Designer</p>
-                            <ul class="social-svg">
+                        <p class="our-team__name">Ігор Дем'яненко</p>
+                        <p class="our-team__job-title">Product Designer</p>
+                            <ul class="our-team__svg">
                                 <li>
                                     <a href="#">
                                     <svg class="" width="20" height="20">
@@ -159,9 +159,9 @@
                     </li>
                     <li>
                         <img src="./images/olga.jpg" alt="Ольга Рєпіна - Frontend Developer" width="270">
-                        <p class="name">Ольга Рєпіна</p>
-                        <p class="job-title">Frontend Developer</p>
-                        <ul class="social-svg">
+                        <p class="our-team__name">Ольга Рєпіна</p>
+                        <p class="our-team__job-title">Frontend Developer</p>
+                        <ul class="our-team__svg">
                             <li>
                                 <a href="#">
                                 <svg class="" width="20" height="20">
@@ -194,9 +194,9 @@
                     </li>
                     <li>
                         <img src="./images/mikola.jpg" alt="Микола Тарасов - Marketing" width="270">
-                        <p class="name">Микола Тарасов</p>
-                        <p class="job-title">Marketing</p>
-                        <ul class="social-svg">
+                        <p class="our-team__name">Микола Тарасов</p>
+                        <p class="our-team__job-title">Marketing</p>
+                        <ul class="our-team__svg">
                             <li>
                                 <a href="#">
                                 <svg class="" width="20" height="20">
@@ -229,9 +229,9 @@
                     </li>
                     <li>
                         <img src="./images/mihail.jpg" alt="Михайло Єрмаков - UI Designer" width="270">
-                        <p class="name">Михайло Єрмаков</p>
-                        <p class="job-title">UI Designer</p>
-                        <ul class="social-svg">
+                        <p class="our-team__name">Михайло Єрмаков</p>
+                        <p class="our-team__job-title">UI Designer</p>
+                        <ul class="our-team__svg">
                             <li>
                                 <a href="#">
                                 <svg class="" width="20" height="20">
@@ -270,42 +270,42 @@
                <h2>Постійні клієнти</h2>
                <ul class="clients">
                 <li>
-                    <a href="" class="clients-link">
+                    <a href="" class="clients__link">
                         <svg class="" width="106" height="60">
                         <use href="./images/icons.svg#icon-company-1"></use> 
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="clients-link">
+                    <a href="" class="clients__link">
                         <svg class="" width="106" height="60">
                             <use href="./images/icons.svg#icon-company-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="clients-link">
+                    <a href="" class="clients__link">
                         <svg class="" width="106" height="60">
                             <use href="./images/icons.svg#icon-company-3"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="clients-link">
+                    <a href="" class="clients__link">
                         <svg class="" width="106" height="60">
                             <use href="./images/icons.svg#icon-company-4"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="clients-link">
+                    <a href="" class="clients__link">
                         <svg class="" width="106" height="60">
                             <use href="./images/icons.svg#icon-company-5"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="" class="clients-link">
+                    <a href="" class="clients__link">
                         <svg class="" width="106" height="60">
                             <use href="./images/icons.svg#icon-company-6"></use>
                         </svg>
@@ -317,12 +317,12 @@
     </main>
     <footer>
         <div class="footer container">
-            <div class="footer-container">
+            <div class="footer__container">
                 <div class="footer-addres-box">
-                    <a class="logo" href="#"><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a>
+                    <a class="logo" href="#"><span class="logo__blue">Web</span><span class="logo-white">Studio</span></a>
                     <address>
-                        <p class="footer-address">м. Київ, пр-т Лесі Українки, 26</p>
-                        <ul class="footer-contacts">
+                        <p class="footer-addres-box__addres">м. Київ, пр-т Лесі Українки, 26</p>
+                        <ul class="footer-addres-box__contacts">
                             <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
                             <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
                         </ul>
@@ -330,7 +330,7 @@
                 </div>
                 <div class="footer-social-box">
                     <h3>приєднуйтесь</h3>
-                    <ul class="footer-social-svg">
+                    <ul class="footer-social-box__svg">
                         <li>
                             <a href="#">
                             <svg class="" width="20" height="20">
@@ -363,9 +363,9 @@
                 </div>
                 <div class="subscribe-box">
                     <h3>Підпишіться на розсилку</h3>
-                    <input type="email" name="user-email" id="user-email" class="subscribe-email" placeholder="E-mail">
-                    <button type="submit" class="subscribe-btn">Підписатися 
-                        <svg class="btn-send" width="24" height="24">
+                    <input type="email" name="user-email" id="user-email" class="subscribe-box__email" placeholder="E-mail">
+                    <button type="submit" class="subscribe-box__btn">Підписатися 
+                        <svg class="subscribe-box__btn-send" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use> 
                         </svg>
                     </button>
