--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
     <header>
         <div class="container">
             <div class="header-con">
-                <a class="logo" href="#"><span class="logo-blue">Web</span><span>Studio</span></a>
-
+                <a class="logo" href="#"><span class="logo__blue">Web</span><span>Studio</span></a>
+    
                 <div class="nav-container">
                     <nav>
                         <ul class="nav">
-                            <li><a href="./index.html">Студія</a></li>
-                            <li class="nav-active"><a href="./portfolio.html">Портфоліо</a></li>
+                            <li><a href="#">Студія</a></li>
+                            <li  class="nav__active"><a href="./portfolio.html">Портфоліо</a></li>
                             <li><a href="#">Контакти</a></li>
                         </ul>
                     </nav>
@@ -206,64 +206,64 @@
             </div>
         </section>
     </main>
-<footer>
-    <div class="footer container">
-        <div class="footer-container">
-            <div class="footer-addres-box">
-                <a class="logo" href="#"><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a>
-                <address>
-                    <p class="footer-address">м. Київ, пр-т Лесі Українки, 26</p>
-                    <ul class="footer-contacts">
-                        <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+    <footer>
+        <div class="footer container">
+            <div class="footer__container">
+                <div class="footer-addres-box">
+                    <a class="logo" href="#"><span class="logo__blue">Web</span><span class="logo-white">Studio</span></a>
+                    <address>
+                        <p class="footer-addres-box__addres">м. Київ, пр-т Лесі Українки, 26</p>
+                        <ul class="footer-addres-box__contacts">
+                            <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social-box">
+                    <h3>приєднуйтесь</h3>
+                    <ul class="footer-social-box__svg">
+                        <li>
+                            <a href="#">
+                                <svg class="" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <svg class="" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <svg class="" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <svg class="" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <div class="footer-social-box">
-                <h3>приєднуйтесь</h3>
-                <ul class="footer-social-svg">
-                    <li>
-                        <a href="#">
-                            <svg class="" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <svg class="" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <svg class="" width="20" height="20">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <svg class="" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="subscribe-box">
-                <h3>Підпишіться на розсилку</h3>
-                <input type="email" name="user-email" id="user-email" class="subscribe-email" placeholder="E-mail">
-                <button type="submit" class="subscribe-btn">Підписатися
-                    <svg class="btn-send" width="24" height="24">
-                        <use href="./images/icons.svg#icon-send"></use>
-                    </svg>
-                </button>
+                </div>
+                <div class="subscribe-box">
+                    <h3>Підпишіться на розсилку</h3>
+                    <input type="email" name="user-email" id="user-email" class="subscribe-box__email" placeholder="E-mail">
+                    <button type="submit" class="subscribe-box__btn">Підписатися
+                        <svg class="subscribe-box__btn-send" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
 
 </html>
